syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "DescriptionProvider";

package description;

service Description{
	rpc GetText (TextRequest) returns (TextReply);
	rpc GetTextSources (google.protobuf.Empty) returns (TextSourcesReply);
	rpc GetTextSourcesStream (google.protobuf.Empty) returns (stream TextSourceReply);
	rpc AddTextSource (AddTextSourceRequest) returns (TextSourceReply);
	rpc DeleteTextSource (DeleteTextSourceRequest) returns (DeleteTextSourceResponse);
}

message TextRequest{
	google.protobuf.Int32Value wordsLimit = 1;
	bool randomWordsCount = 2;
	google.protobuf.Int32Value textSourceId = 3;
}

message TextReply{
	string text = 1;
}

message AddTextSourceRequest{
	string name = 1;
	string text = 2;
}

message DeleteTextSourceRequest{
	int32 textSourceId = 1;
}

message DeleteTextSourceResponse{
	string error = 1;
}

message TextSourceReply{
	int32 id = 1;
	string name = 2;
	string text =  3;
}

message TextSourcesReply{
	repeated TextSourceReply textSources = 1;
}
